<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agil\'gator</string>
    <string name="title_add_task">Ajouter une tache</string>
    <string name="title_add_sub_task">Ajouter une sous tâche</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_create">Créer un nouveau projet</string>
    <string name="action_delete">Supprimer un projet</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_project_list">Liste des projets</string>
    <string name="title_project">Title project one</string>
    <string name="title_activity_descriptif_projet">Description Projet</string>
    <string name="title_activity_descriptif_tache">Description Tache</string>
    <string name="sub_title_project">subTitle</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_page_projet">Page_projet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_modif__task">Modification tâche</string>

    <!-- pour le context menu des tâches -->
    <string name="modif_task">Modifier Tâche</string>
    <string name="add_sub_task">Ajouter une sous tâche</string>
    <!-- pour modifier la tâche -->
    <string name="modif_task_button">Modifier la tâche</string>
    <string name="title_activity_edit_projet">EditProjet</string>
    <string name="title_activity_archived_sprint">ArchivedSprint</string>
    <string name="title_activity_page_sprint">PageSprint</string>
    <string name="title_activity_add_sub_task">AddSubTask</string>
    <string name="title_add__sub_task_page">Créer une sous tache</string>
    <string name="error_login">Mauvaise combinaison email/password</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_statistic">Statistique</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_nom">Nom</string>
    <string name="create_account_prenom">Prénom</string>
    <string name="create_account_password">Password</string>
    <string name="error_account_email">L\'email que vous avez entré est incorecte</string>
    <string name="error_account_name">Veuillez entrer un nom</string>
    <string name="error_account_prenom">Veuillez entrer un prénom</string>
    <string name="error_account_password">Veuillez entrer un mot de passe correct</string>
    <string name="title_activity_statistic_sprint">Statistic_sprint</string>
    <string name="title_activity_add_member_projet">AddMemberProjet</string>
    <string name="title_add_member_project">Ajouter un membre au projet</string>
    <string name="title_activity_assign_member">AssignMember</string>
    <string name="assign_task">Choisir la Sous tâche à affecter</string>

</resources>
