<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.agil_gator_nf28.agil_gator.CreateAccount">

    <TextView
        android:id="@+id/textView1"
        android:text="@string/title_activity_create_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/activity_title_size"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="35dp"
        android:id="@+id/add_task_project_name"
        android:gravity="center"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/lineTop"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:id="@+id/nomProjet"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/lineTop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/create_account_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/createAccoutMail" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sousTitre"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/nomProjet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="192dp"
        android:layout_marginTop="60dp">

        <TextView
            android:text="@string/create_account_nom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/CreateAccountNom" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/difficulte"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/sousTitre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp">

        <TextView
            android:text="@string/create_account_prenom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/createAccountPrenom" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/description"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/difficulte"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp">

        <TextView
            android:text="@string/create_account_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/CreateAccountPassword" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_alignTop="@+id/description"
        android:id="@+id/create_account_btn"
        android:layout_marginTop="120dp"/>

</RelativeLayout>
